# diplom

./: .gitignore  CMakeLists.txt  Connection.cpp  Dockerfile  Dockerfile-generate  Dockerfile-service  Exception.cpp  Logger.cpp  LogicalConsumer.cpp  LogicalReplicationConsumer.cpp  LogicalReplicationHandler.cpp  LogicalReplicationParser.cpp  Scheduler.cpp  conanfile.py  docker-compose.yml  example.cpp  exception.cpp  generate.py  logger.cpp  logical_replication_consumer.cpp  logical_replication_handler.cpp  logical_replication_parser.cpp  main.cpp  otterbrix_converter.cpp  otterbrix_service.cpp  postgres_settings.cpp  scheduler.cpp  test.cpp  wait-for-postgres.sh  сonnection.cpp
common/: exception.cpp  logger.cpp  scheduler.cpp
include/: Connection.h  Exception.h  Logger.h  LogicalConsumer.h  LogicalReplicationConsumer.h  LogicalReplicationHandler.h  LogicalReplicationParser.h  Scheduler.h  logger.h  logical_replication_consumer.h  logical_replication_handler.h  logical_replication_parser.h  otterbrix_converter.h  otterbrix_service.h  postgres_settings.h  scheduler.h  сonnection.h
include/common/: exception.h  logger.h  scheduler.h  thread_pool.h
include/lock_free_queue/: atomicops.h  readerwriterqueue.h
include/logical_replication/: logical_replication_consumer.h  logical_replication_handler.h  logical_replication_parser.h
include/otterbrix/: document_types.h  otterbrix_converter.h  otterbrix_layer.h  otterbrix_service.h
include/postgres/: postgres_settings.h  postgres_types.h  сonnection.h
init/: init.sql
logical_replication/: logical_replication_consumer.cpp  logical_replication_handler.cpp  logical_replication_parser.cpp
otterbrix/: otterbrix_converter.cpp  otterbrix_layer.cpp  otterbrix_service.cpp
postgres/: postgres_settings.cpp  сonnection.cpp
postgres/init/: init.sql
postgres_init/: postgresql.conf
postgres_init/init/: init.sql
